# iac-demo-vm

./: .azure_env.exapmle  .env.example  .gitignore  DESIGN.md  README.md  dev_notes.md  pyproject.toml
.github/workflows/: cleanup-infrastructure.yml  deploy.yml  destroy.yml
ansible/: inventory.ini.example  inventory.ini.j2  playbook.yml
ansible/roles/app_deploy/defaults/: main.yml
ansible/roles/app_deploy/files/static/: index.html
ansible/roles/app_deploy/tasks/: main.yml
ansible/roles/app_deploy/templates/: docker-compose.yml.j2  nginx.conf.j2
ansible/roles/docker/tasks/: main.yml
ansible/roles/keycloak/tasks/: main.yml
docker/: .env.example  docker-compose.yml  nginx.conf
docker/static/: index.html
terraform/: main.tf  network.tf  outputs.tf  terraform.tfvars.example  variables.tf  vm.tf
